# Diffulex

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pymarkdown  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  format.sh  pyproject.toml  quantization_architecture.md  quantization_architecture_diagram.md
.github/: dependabot.yml
diffulex/: __init__.py  config.py  diffulex.py  llm.py  logger.py
diffulex_bench/: README.md  __init__.py  arg_parser.py  config.py  datasets.py  lm_eval_model.py  logger.py  main.py  metrics.py  report.py  runner.py
diffulex_kernel/: __init__.py
diffulex_legacy/: config.py
diffulex_profiler/: README.md  __init__.py  example.py  metrics.py  profiler.py
examples/: test_bf16_kernel_e2e.py  test_causal_lm_decoding_kernel.py  test_dllm_decoding_kernel.py  test_dllm_kv_cache_load.py  test_dllm_kv_cache_store.py  test_dream_diffulex_gsm8k.py  test_dream_dvllm_gsm8k.py  test_dream_dvllm_human_eval.py  test_dream_model_weight.py  test_dream_model_weight_fixed.py  test_fastdllmv2_diffulex_gsm8k.py  test_fp8_kernel_e2e.py  test_fp8_kv_cache_comprehensive.py  test_fp8_kv_cache_distinct.py  test_fp8_kv_cache_pipeline.py  test_fp8_kv_cache_python_dequant.py  test_gptq_awq_loading.py  test_kv_cache_fp8_distinct_roundtrip.py  test_kv_cache_fp8_unified_roundtrip.py  test_llada_dvllm_human_eval.py  test_quantization_generation.py  test_qwen_dvllm.py  test_sdar_diffulex_gsm8k.py  test_sdar_dvllm.py  test_text_generation.py  test_w4a16_generation.py  test_w8a16_generation.py
profile/: d2f_dream_profile.py  torch_d2f_profiler.py
(+183 files in other folders)
